# EasyPassyword

./: .gitignore  Cargo.toml  EasyPasswordProj.md  LICENSE  README.md  config.example.toml
examples/: check_dep.rs  gen_assets.rs
scripts/: macos-bundle.sh
src/: autostart.rs  config.rs  core.rs  detect.rs  detect_macos.rs  inject.rs  main.rs  master_key.rs  tray.rs
src/detect/: platform.rs
src/detect/platform/: macos.rs  rdev.rs
