[package]
name = "easypassword"
version = "0.1.0"
edition = "2021"
description = "A local-only deterministic password generator with global keyboard trigger detection"
license = "MIT"
authors = ["EasyPassword Contributors"]
keywords = ["password", "generator", "deterministic", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
argon2 = "0.4"
sha2 = "0.10"
base64ct = "=1.6.0"
rdev = "0.5"
enigo = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
