[package]
name = "easypassword"
version = "0.1.3"
edition = "2021"
description = "A local-only deterministic password generator with global keyboard trigger detection"
license = "MIT"
authors = ["EasyPassword Contributors"]
keywords = ["password", "generator", "deterministic", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
argon2 = "0.4"
sha2 = "0.10"
base64ct = "=1.6.0"
rdev = "0.5"
enigo = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

tao = "0.34"
tray-icon = "0.21"
lodepng = { version = "3.12", default-features = false, features = ["rust_backend"] }
rgb = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
strip = true
